--- a/MVCTVManagerProject/MVCTVManagerProject.csproj
+++ b/MVCTVManagerProject/MVCTVManagerProject.csproj
@@ -6,4 +6,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TVManager_Domain\TVManager_Domain.csproj" />
+    <ProjectReference Include="..\TVManager_Infastructer\TVManager_Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
